[EA3-118] refactor: 리뷰 저장 내부 메서드 이름 리팩토링